Mon Sep  8 16:17:12 UTC 2014  Phil Mesnier  <mesnier_p@ociweb.com>

        * orbsvcs/ImplRepo_Service/ImR_Activator_i.cpp:
          Logging improvments.
        * orbsvcs/ImplRepo_Service/Locator_Repository.cpp:
          Improve the performance when dealing with a new server registering
          the same address of an already registered server. Rather than
          expunging the existing server from the registry, treat it as a
          dead server. Also improved the comparison of server identities.
          It will still get tripped up by multiple POAs in a server that are
          logically unlinked.

        * orbsvcs/tests/ImplRepo/ReconnectServer/client.cpp:
          Cleaned up a confusing bit of boolean algebra.
        * orbsvcs/tests/ImplRepo/ReconnectServer/run_test.pl:
          Add a variation of the test to handle POAs that are logically linked
          without using serverID.

        * tao/Dynamic_TP/DTP_Task.cpp:
          Add a sanity check before attempting to cancel a NUL servant.

        * tao/Synch_Invocation.cpp:
          Reformat a debug log message.

Mon Sep  8 15:30:49 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Connection_Handler.h:
          Added missing include

Fri Sep  5 14:47:26 UTC 2014  Phil Mesnier  <mesnier_p@ociweb.com>

        * tests/Objref_Sequence_Test/server.cpp:
          Restored the explicit reference counting behavior.

Thu Sep  4 22:38:17 UTC 2014  Phil Mesnier  <mesnier_p@ociweb.com>

        * tests/Objref_Sequence_Test/server.cpp:
          On at least one build, the server was throwing a WrongPolicy
          exception when servant->_this() was used to activate a new object.
          Since there was only one POA, the root POA, I have no idea why an
          exception was raised. Using explicit activation avoids the problem.

Thu Sep  4 16:42:08 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/Naming_Service/NT_Naming_Server.cpp: