@@ -2391,6 +2391,7 @@ Alexey Zubko <alexey dot zubko at gmail dot com>
 Michael Dille <mdille3 at andrew dot cmu dot edu>
 Sebastian Perk <Sebastian dot Perk at hydrometer dot de>
 David Lifshitz <dlifshitz at macadamian dot com>
+Milo H. Fields <mfields at paladin-sys dot com>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson in the early 1990's.  Paul devised the recursive Makefile
